--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,11 @@
 <html>
     <head>
      	<title>Untitled</title>
-		<style></style>
+		<style>
+
+		body {background: #f9f9f9;}
+
+		</style>
 		<script src="popup.js"></script>
        
     </head>
